tests/invalid_inputs/parsing/ctor_memory_initializer.cpp
// this should not be parser in c+-

struct S {
	int a;
	S() : a(42) {}
};
